# limx-cli

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README_cn.md  README_en.md  SECURITY.md  SKILL.md  limx_cli_entrypoints.py  package.xml  pyproject.toml  setup.py
agent_harness/: __init__.py  _stub_fonts.js  cli.py  scratch_bridge.py  scratch_runner.js
limx-cli/: __init__.py  _stub_text_encoding.js  cli.py  client.py  scratch_bridge.py  scratch_runner.js
limx_agent_harness/: client.py  scratch_bridge.py  scratch_runner.js
scratch-app/: package-lock.json
scratch-app/src/addons/addons-l10n-settings/: fi.json
scratch-app/src/components/controls/: controls.jsx
scratch-app/src/components/gui/: gui.css  gui.jsx
scratch-app/src/components/loader/: loader.css  loader.jsx
scratch-app/src/components/menu-bar/: language-menu.jsx  menu-bar.css  menu-bar.jsx  settings-menu.jsx  tw-news.jsx  tw-theme-gui.jsx
scratch-app/src/components/stage-header/: stage-header.jsx
scratch-app/src/containers/: blocks.jsx  controls.jsx  extension-library.jsx  green-flag-overlay.jsx
scratch-app/src/lib/: brand.js  limx-confirm.js  limx-run-program.js  make-toolbox-xml.js  tw-state-manager-hoc.jsx
scratch-app/src/lib/libraries/extensions/: index.jsx
scratch-app/src/lib/themes/: index.js  themePersistance.js
scratch-app/src/lib/themes/accent/: red.js
scratch-app/src/lib/themes/blocks/: dark.js  three.js
scratch-app/src/lib/themes/gui/: dark.js  light.js
scratch-app/src/lib/tw-translations/: generated-translations.json
scratch-app/src/playground/: index.ejs
scratch-app/static/: manifest.webmanifest
scratch-app/static/static/: bootstrap.js
scripts/: build-agent-harness.sh  build-limx-cli.sh
tests/: test_cli.py  test_client.py  test_packaging_metadata.py  test_scratch_bridge.py
