[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "limx-cli"
version = "0.1.0"
description = "Agent-native CLI harness for the LimX robot signaling WebSocket skills"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.scripts]
limx-cli = "limx_cli_entrypoints:cli_main"
limx-scratch = "limx_cli_entrypoints:scratch_main"

[tool.setuptools]
include-package-data = true
py-modules = ["limx_cli_entrypoints"]

[tool.setuptools.package-data]
"*" = ["*.js", "vendor/**/*"]
